[tool.poetry]
name = "kyber"
version = "0.1.0"
description = ""
authors = ["war-in <marcin.warchol20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
poethepoet = "^0.24.2"
pylint = "^3.0.2"
black = "^23.11.0"
isort = "^5.12.0"
pycryptodome = "3.14.1"

[tool.poe.tasks]
lint = "pylint src"
fmt.shell = "isort . && black ."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
